--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.13",
     "rss-generator": "^0.0.3"
   },
   "name": "proiect-web-2024-hema-",
