--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "nodemon": "^3.1.0"
   },
   "scripts": {
-    "start": "scripts\\run-scripts.bat"
+    "start": "run-scripts.bat"
   },
   "keywords": [],
   "author": "",
