--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "crypto": "^1.0.1",
+    "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
+    "formidable": "^3.5.1",
     "mysql2": "^3.10.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
